# firecracker

./: Cargo.toml
src/firecracker/: Cargo.toml
src/firecracker/examples/uffd/: on_demand_handler.rs  uffd_utils.rs
src/firecracker/swagger/: firecracker.yaml
src/image-extractor/: Cargo.toml  README.md
src/image-extractor/src/: main.rs
src/vmm/src/: lib.rs  persist.rs  rpc_interface.rs
src/vmm/src/devices/virtio/balloon/: device.rs  persist.rs
src/vmm/src/logger/: metrics.rs
src/vmm/src/snapshot/: free_pages.rs  mod.rs
src/vmm/src/vmm_config/: balloon.rs
