[package]
name = "image-extractor"
version = "1.13.0-dev"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "image-extractor"
bench = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.39", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
digest = "0.10"
tokio = { version = "1.0", features = ["full"] }
bollard = "0.16"
tempfile = "3.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
libc = "0.2.172"

[lints]
workspace = true
